Correção do mapeamento OneToMany na entidade Camera